--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "minidsp-remote",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "proxy": "http://192.168.88.237:4000",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
