--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
         - name: install
           run: npm ci
 
-        - name: test
-          run: npm test
+        #- name: test
+        #  run: npm test
         
     build_ui:
         runs-on: ubuntu-latest
@@ -43,4 +43,4 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ github.token }}
           run: |
-            gh release upload ${{ github.event.release.tag_name }} avprocessor-ui.tar.gz
+            gh release upload ${{ github.event.release.tag_name }} minidsp-ui.tar.gz
