better UX, simpler server

--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -1,5 +1,5 @@
 # put this file in /lib/systemd/system/minidsp-ui.service
-# download minidsp-ui.tar.gz from releases, and extract into /usr/bin/
+# download minidsp-ui.tar.gz from releases, and extract into /usr/bin/minidsp-ui
 # `sudo systemctl enable minidsp-ui`
 
 [Unit]
