--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fastify/static": "^7.0.4",
     "fastify": "^4.28.0",
-    "node-ble": "^1.13.0"
+    "node-ble": "^1.13.0",
+    "node-hid": "^3.1.2"
   }
 }
