--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -9,6 +9,7 @@ StartLimitBurst=10
 
 [Service]
 Type=simple
+Environment="USB_INDEX=2"
 ExecStart=node /usr/bin/minidsp-ui/index
 Restart=always
 RestartSec=1
