--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,5 @@ jobs:
       run: npm ci
     - name: run tests
       run: npm run test -- --coverage .
+    - name: compile
+      run: npm run build
