--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -9,7 +9,7 @@ StartLimitBurst=10
 
 [Service]
 Type=simple
-Environment="USB_INDEX=2"
+Environment="USE_RELAY=1,RELAY_PIN=538"
 ExecStart=node /usr/bin/minidsp-ui/index
 Restart=always
 RestartSec=1
