--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -9,7 +9,8 @@ StartLimitBurst=10
 
 [Service]
 Type=simple
-Environment="USE_RELAY=1,RELAY_PIN=538"
+Environment="USE_RELAY=1"
+Environment="RELAY_PIN=538"
 ExecStart=node /usr/bin/minidsp-ui/index
 Restart=always
 RestartSec=1
