--- a/examples/minidsp-bt.service
+++ b/examples/minidsp-bt.service
@@ -19,8 +19,8 @@ RestartSec=1
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=minidsp-bt
-User=root
-Group=root
+User=minidsp
+SupplementaryGroups=bluetooth plugdev
 CPUSchedulingPolicy=fifo
 CPUSchedulingPriority=10
 
