--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -10,15 +10,15 @@ StartLimitBurst=10
 [Service]
 Type=simple
 Environment="USE_RELAY=1"
-Environment="RELAY_PIN=538"
+Environment="RELAY_PIN=533"
 ExecStart=node /usr/bin/minidsp-ui/index
 Restart=always
 RestartSec=1
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=minidsp-ui
-User=root
-Group=root
+User=minidsp
+SupplementaryGroups=gpio
 CPUSchedulingPolicy=fifo
 CPUSchedulingPriority=10
 
