--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "fastify": "^4.28.0",
     "node-ble": "^1.13.0",
-    "node-hid": "^3.1.2",
-    "node-openssl-cert": "^0.1.44"
+    "node-hid": "^3.1.2"
   }
 }
