improved how to pass domain name

--- a/examples/nginx.conf
+++ b/examples/nginx.conf
@@ -18,8 +18,8 @@ server {
 server {
     listen 443 ssl;
     server_name HOSTNAME;
-    ssl_certificate /etc/ssl/local/HOSTNAME.crt;
-    ssl_certificate_key /etc/ssl/local/device.key;
+    ssl_certificate /home/minidsp/ssl/device.crt;
+    ssl_certificate_key /home/minidsp/ssl/device.key;
     root /usr/bin/minidsp-ui/build;
     index index.html;
     # Restrict to local network
