--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -11,6 +11,7 @@ StartLimitBurst=10
 Type=simple
 Environment="USE_RELAY=1"
 Environment="RELAY_PIN=533"
+Environment="DOMAIN=HOSTNAME"
 ExecStart=node /usr/bin/minidsp-ui/index
 Restart=always
 RestartSec=1
@@ -18,7 +19,7 @@ StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=minidsp-ui
 User=minidsp
-SupplementaryGroups=gpio minidspgroup
+SupplementaryGroups=gpio
 CPUSchedulingPolicy=fifo
 CPUSchedulingPriority=10
 
