--- a/examples/nginx.conf
+++ b/examples/nginx.conf
@@ -1,36 +1,38 @@
-server {
-    listen 80;
-    server_name HOSTNAME;
-    allow 192.168.1.0/16;
-    deny all;
-    root /usr/bin/minidsp-ui/build;
-    index index.html;
-    # Reverse Proxy Rules
-    location /api/ {
-        proxy_pass http://localhost:4000;  # Forward to local service
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+http {
+    server {
+        listen 80;
+        server_name HOSTNAME;
+        allow 192.168.1.0/16;
+        deny all;
+        root /usr/bin/minidsp-ui/build;
+        index index.html;
+        # Reverse Proxy Rules
+        location /api/ {
+            proxy_pass http://localhost:4000;  # Forward to local service
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
 
-server {
-    listen 443 ssl;
-    server_name HOSTNAME;
-    ssl_certificate /home/minidsp/ssl/device.crt;
-    ssl_certificate_key /home/minidsp/ssl/device.key;
-    root /usr/bin/minidsp-ui/build;
-    index index.html;
-    # Restrict to local network
-    allow 192.168.1.0/16;
-    deny all;
-    # Reverse Proxy Rules
-    location /api/ {
-        proxy_pass http://localhost:4000;  # Forward to local service
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 443 ssl;
+        server_name HOSTNAME;
+        ssl_certificate /home/minidsp/ssl/device.crt;
+        ssl_certificate_key /home/minidsp/ssl/device.key;
+        root /usr/bin/minidsp-ui/build;
+        index index.html;
+        # Restrict to local network
+        allow 192.168.1.0/16;
+        deny all;
+        # Reverse Proxy Rules
+        location /api/ {
+            proxy_pass http://localhost:4000;  # Forward to local service
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
