--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "fastify": "^4.28.0",
+    "@fastify/jwt": "^9.1.0",
+    "fastify": "^5.0.0",
     "node-ble": "^1.13.0",
     "node-hid": "^3.1.2"
   }
