--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 on: push
-  
+
 jobs:
   run_server_tests:
     name: Run rust test
@@ -8,10 +8,13 @@ jobs:
       run:
         working-directory: ./server
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install 
-      run: npm ci
+      - name: Install
+        run: npm ci
+
+      - name: test
+        run: npm test
 
   run_ui_tests:
     name: Run UI tests
@@ -20,10 +23,10 @@ jobs:
       run:
         working-directory: ./client
     steps:
-    - uses: actions/checkout@v4
-    - name: install deps
-      run: npm ci
-    - name: run tests
-      run: npm run test -- --coverage .
-    - name: compile
-      run: npm run build
+      - uses: actions/checkout@v4
+      - name: install deps
+        run: npm ci
+      - name: run tests
+        run: npm run test -- --coverage .
+      - name: compile
+        run: npm run build
