--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js",
     "start-dev": "node index_mock.js"
   },
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@fastify/jwt": "^9.1.0",
-    "fastify": "^5.0.0",
+    "fastify": "^5.3.0",
     "node-ble": "^1.13.0",
     "node-hid": "^3.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
