--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "fastify": "^5.3.0",
     "node-ble": "^1.13.0",
+    "node-cron": "^4.1.0",
     "node-hid": "^3.1.2"
   },
   "devDependencies": {
