--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,14 +2,17 @@ on: push
 
 jobs:
   run_server_tests:
-    name: Run rust test
+    name: Run server test
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: ./server
     steps:
       - uses: actions/checkout@v4
-
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "24.1.0"
       - name: Install
         run: npm ci
 
