--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -9,6 +9,7 @@ StartLimitBurst=10
 
 [Service]
 Type=simple
+Environment="COMPARE_STRING=${putkeyhere}"
 Environment="USE_RELAY=1"
 Environment="RELAY_PIN=533"
 Environment="DOMAIN=HOSTNAME"
