--- a/examples/minidsp-bt.service
+++ b/examples/minidsp-bt.service
@@ -10,7 +10,7 @@ StartLimitBurst=10
 [Service]
 Environment="BLUETOOTH_DEVICE_ID=hci1"
 Type=simple
-ExecStartPre=sudo /usr/sbin/rfkill unblock bluetooth
+ExecStartPre=/usr/sbin/rfkill unblock bluetooth
 ExecStartPre=bluetoothctl power off
 ExecStartPre=bluetoothctl power on
 ExecStart=node /usr/bin/minidsp-ui/bt
