--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -13,7 +13,8 @@ Environment="COMPARE_STRING=STRING_TO_USE_IF_PRIVATE_KEY_IS_LOST"
 Environment="USE_RELAY=1"
 Environment="RELAY_PIN=533"
 Environment="DOMAIN=HOSTNAME"
-ExecStart=node /usr/bin/minidsp-ui/index
+Environment="DB_PATH=/home/minidsp/db/minidsp"
+ExecStart=node /usr/bin/minidsp-ui/index.ts
 Restart=always
 RestartSec=1
 StandardOutput=journal
