--- a/examples/minidsp-bt.service
+++ b/examples/minidsp-bt.service
@@ -13,7 +13,7 @@ Type=simple
 ExecStartPre=/usr/sbin/rfkill unblock bluetooth
 ExecStartPre=bluetoothctl power off
 ExecStartPre=bluetoothctl power on
-ExecStart=node /usr/bin/minidsp-ui/bt
+ExecStart=node /usr/bin/minidsp-ui/bt.ts
 Restart=always
 RestartSec=1
 StandardOutput=journal
