--- a/minidsp-server/Cargo.toml
+++ b/minidsp-server/Cargo.toml
@@ -9,7 +9,7 @@ jsonwebtoken = "9.3.1"
 rcgen = { version = "0.14.1", features = ["pem"] }
 base64 = "0.22.1"
 time = { version = "0.3.6", default-features = false }
-#rppal = "0.22.1"
+rppal = { version = "0.22.1", optional = true }
 
 [dependencies.sqlx]
 version = "0.7.0"
@@ -19,3 +19,6 @@ features = ["macros", "migrate"]
 [dependencies.rocket_db_pools]
 version = "0.2.0"
 features = ["sqlx_sqlite"]
+
+[features]
+gpio = ["dep:rppal"]
