--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: test
         run: npm test
-        
+
   run_rust_tests:
     name: Run rust test
     runs-on: ubuntu-latest
@@ -36,6 +36,31 @@ jobs:
         env:
           SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
 
+  run_rust_builds:
+    name: Run rust builds
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target: 
+        - x86_64-unknown-linux-musl
+        - armv7-unknown-linux-gnueabihf
+        - aarch64-unknown-linux-gnu
+        feature_flag:
+        - gpio
+        - ""
+    steps:
+    - name: Install Rust
+      run: |
+        curl -L https://github.com/cross-rs/cross/releases/download/v0.2.5/cross-x86_64-unknown-linux-gnu.tar.gz -o cross-x86_64-unknown-linux-gnu.tar.gz
+        tar -xvzf cross-x86_64-unknown-linux-gnu.tar.gz
+        rustup update stable
+
+    - name: Compile
+      run: |
+        ./cross build --release --target ${{ matrix.target }} --features ${{ matrix.feature_flag }}
+      env:
+        SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
   run_ui_tests:
     name: Run UI tests
     runs-on: ubuntu-latest
