--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
   run_rust_tests:
     name: Run rust test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./minidsp-server 
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
