--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write # release changes require contents write
+    defaults:
+      run:
+        working-directory: ./minidsp-server
     strategy:
       fail-fast: false
       matrix:
@@ -33,27 +36,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
-        working-directory: ./minidsp-server
         run: |
           curl -L https://github.com/cross-rs/cross/releases/download/v0.2.5/cross-x86_64-unknown-linux-gnu.tar.gz -o cross-x86_64-unknown-linux-gnu.tar.gz
           tar -xvzf cross-x86_64-unknown-linux-gnu.tar.gz
           rustup update stable
 
       - name: Compile
-        working-directory: ./minidsp-server
         run: |
           ./cross build --release --target ${{ matrix.target }} ${{ matrix.feature_flag }} 
         env:
           SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
 
       - name: Release
-        working-directory: ./minidsp-server
         run: |
           cd target/${{ matrix.target }}/release  
           tar czvf ../../../minidsp-server-${{ matrix.target }}${{ matrix.feature_flag != '' && '-gpio' || ''}}.tar.gz minidsp-server
         
       - name: upload artifact
-        working-directory: ./minidsp-server
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
