--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
   run_rust_tests:
     name: Run rust test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./minidsp-server
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -30,7 +33,6 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
-        working-directory: ./minidsp-server
         run: |
           cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
           cat lcov.info
@@ -40,6 +42,9 @@ jobs:
   run_rust_builds:
     name: Run rust builds
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./minidsp-server
     strategy:
       fail-fast: false
       matrix:
@@ -51,15 +56,14 @@ jobs:
         - --features gpio
         - ""
     steps:
+    - uses: actions/checkout@v4
     - name: Install Rust
-      working-directory: ./minidsp-server
       run: |
         curl -L https://github.com/cross-rs/cross/releases/download/v0.2.5/cross-x86_64-unknown-linux-gnu.tar.gz -o cross-x86_64-unknown-linux-gnu.tar.gz
         tar -xvzf cross-x86_64-unknown-linux-gnu.tar.gz
         rustup update stable
 
     - name: Compile
-      working-directory: ./minidsp-server
       run: |
         ./cross build --release --target ${{ matrix.target }} ${{ matrix.feature_flag }}
       env:
