--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -14,6 +14,7 @@ Environment="USE_RELAY=1"
 Environment="RELAY_PIN=21"
 Environment="DOMAIN=HOSTNAME"
 Environment="DB_PATH=/home/minidsp/db/minidsp"
+Environment="SSL_PATH=/home/minidsp/ssl"
 ExecStart=node /usr/bin/minidsp-ui/index.ts
 Restart=always
 RestartSec=1
