--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -15,6 +15,7 @@ Environment="RELAY_PIN=21"
 Environment="DOMAIN=HOSTNAME"
 Environment="DB_PATH=/home/minidsp/db/minidsp"
 Environment="SSL_PATH=/home/minidsp/ssl"
+Environment=ROCKET_DATABASES='{minidsp={url="/home/minidsp/db/minidsp/minidsp.sqlite"}}'
 ExecStart=node /usr/bin/minidsp-ui/index.ts
 Restart=always
 RestartSec=1
