--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -1,5 +1,6 @@
 # put this file in /lib/systemd/system/minidsp-ui.service
 # download minidsp-ui.tar.gz from releases, and extract into /usr/bin/minidsp-ui
+# download minidsp-server-aarch64-unknown-linux-gnu-gpio.tar.gz from releases, and extract into /usr/bin/minidsp-ui
 # `sudo systemctl enable minidsp-ui`
 
 [Unit]
@@ -15,7 +16,7 @@ Environment="RELAY_PIN=21"
 Environment="DOMAIN=HOSTNAME"
 Environment="SSL_PATH=/home/minidsp/ssl"
 Environment=ROCKET_DATABASES='{minidsp={url="/home/minidsp/db/minidsp/minidsp.sqlite"}}'
-ExecStart=node /usr/bin/minidsp-ui/index.ts
+ExecStart=node /usr/bin/minidsp-ui/minidsp-server
 Restart=always
 RestartSec=1
 StandardOutput=journal
