--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "minidsp-remote",
   "version": "0.1.0",
   "private": true,
-  "proxy": "localhost:8000",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.14.0",
