--- a/minidsp-server/Cargo.toml
+++ b/minidsp-server/Cargo.toml
@@ -8,8 +8,9 @@ rocket = { version = "0.5.1", features = ["json"] }
 jsonwebtoken = "9.3.1"
 rcgen = { version = "0.14.1", features = ["pem"] }
 base64 = "0.22.1"
-time = { version = "0.3.6", default-features = false }
+time = { version = "0.3.6", features = ["serde"] }
 rppal = { version = "0.22.1", optional = true }
+x509-parser = { version = "0.17.0" }
 
 [dependencies.sqlx]
 version = "0.7"
