--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,10 +77,16 @@ jobs:
         run: npm run build
 
       - name: package
-        run: tar czvf minidsp-ui.tar.gz -C client build -C ../examples install_script.sh minidsp-bt.service minidsp-ui.service nginx.conf nginx.service -C ../server index.ts bt.ts crypto.ts gpio.ts onoff.ts db.ts minidsp.ts routes.ts scripts/create_root_cert_and_key.sh package-lock.json package.json
+        run: tar czvf minidsp-ui.tar.gz -C client build -C ../examples minidsp-bt.service minidsp-ui.service nginx.conf nginx.service -C ../server index.ts bt.ts crypto.ts gpio.ts onoff.ts db.ts minidsp.ts routes.ts scripts/create_root_cert_and_key.sh package-lock.json package.json
 
-      - name: upload artifact
+      - name: upload ui
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
           gh release upload ${{ github.event.release.tag_name }} minidsp-ui.tar.gz
+
+      - name: upload install_script
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          gh release upload ${{ github.event.release.tag_name }} install_script.sh
