--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,4 +89,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release upload ${{ github.event.release.tag_name }} install_script.sh
+          gh release upload ${{ github.event.release.tag_name }} examples/install_script.sh
