--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -16,7 +16,7 @@ Environment="RELAY_PIN=21"
 Environment="DOMAIN=HOSTNAME"
 Environment="SSL_PATH=/home/minidsp/ssl"
 Environment=ROCKET_DATABASES='{minidsp={url="/home/minidsp/db/minidsp.sqlite"}}'
-ExecStart=node /usr/bin/minidsp-ui/minidsp-server
+ExecStart=/usr/bin/minidsp-ui/minidsp-server
 Restart=always
 RestartSec=1
 StandardOutput=journal
