--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
         run: npm run build
 
       - name: package
-        run: tar czvf minidsp-ui.tar.gz -C client build -C ../examples minidsp-bt.service minidsp-ui.service nginx.conf nginx.service -C ../server index.ts bt.ts crypto.ts gpio.ts onoff.ts db.ts minidsp.ts routes.ts scripts/create_root_cert_and_key.sh package-lock.json package.json
+        run: tar czvf minidsp-ui.tar.gz -C client build -C ../examples minidsp-bt.service minidsp-ui.service nginx.conf nginx.service -C ../server bt.ts minidsp.ts scripts/create_root_cert_and_key.sh package-lock.json package.json
 
       - name: upload ui
         env:
