--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint": "eslint src"
   },
   "devDependencies": {
