--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -2,6 +2,7 @@
     "roots": [
         "<rootDir>/src"
     ],
+    "maxWorkers": 1,
     "collectCoverageFrom": [
         "src/**/*.{js,jsx,ts,tsx}",
         "!src/**/*.d.ts"
