--- a/client/.parcelrc
+++ b/client/.parcelrc
@@ -1,7 +1,12 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "jsx:*.svg": ["...", "@parcel/transformer-svg-jsx"],
-    "jsx:*": ["..."]
+    "jsx:*.svg": [
+      "...",
+      "@parcel/transformer-svg-jsx"
+    ],
+    "jsx:*": [
+      "..."
+    ]
   }
 }
