--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "test": "jest",
+    "test": "vitest",
     "lint": "eslint src"
   },
   "devDependencies": {
@@ -18,16 +18,17 @@
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "babel-jest": "^30.0.4",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "babel-preset-react-app": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.4",
-    "jest-environment-jsdom": "^30.0.4",
-    "jest-watch-typeahead": "^3.0.1",
+    "msw": "^2.10.4",
     "parcel": "^2.15.4",
-    "whatwg-fetch": "^3.6.20"
+    "playwright": "^1.54.1",
+    "vitest": "^3.2.4",
+    "vitest-browser-react": "^1.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
