--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,12 @@
   "private": true,
   "source": "public/index.html",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build",
+    "start": "vite",
+    "build": "tsc -b && vite build",
     "test": "vitest",
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.15.4",
-    "@parcel/transformer-webmanifest": "^2.15.4",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.7.0",
@@ -26,8 +20,8 @@
     "eslint-config-react-app": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
     "msw": "^2.10.4",
-    "parcel": "^2.15.4",
     "playwright": "^1.54.1",
+    "vite": "^7.0.5",
     "vitest": "^3.2.4",
     "vitest-browser-react": "^1.0.0"
   },
