--- a/examples/nginx.conf
+++ b/examples/nginx.conf
@@ -10,6 +10,7 @@ http {
         deny all;
         root /usr/bin/minidsp-ui/dist;
         index index.html;
+        include /etc/nginx/mime.types;
         # Reverse Proxy Rules
         location /api/ {
             proxy_pass http://localhost:8000;  # Forward to local service
@@ -27,6 +28,7 @@ http {
         ssl_certificate_key /home/minidsp/ssl/device.key;
         root /usr/bin/minidsp-ui/dist;
         index index.html;
+        include /etc/nginx/mime.types;
         # Restrict to local network
         allow 192.168.1.0/16;
         deny all;
