--- a/client/package.json
+++ b/client/package.json
@@ -2,25 +2,30 @@
   "name": "minidsp-remote",
   "version": "0.1.0",
   "private": true,
-  "source": "public/index.html",
+  "type": "module",
   "scripts": {
     "start": "vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
+    "lint": "eslint .",
     "test": "vitest",
-    "lint": "eslint src"
+    "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
-    "babel-preset-react-app": "^10.1.0",
-    "eslint": "^8.57.1",
-    "eslint-config-react-app": "^7.0.1",
-    "identity-obj-proxy": "^3.0.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
     "msw": "^2.10.4",
     "playwright": "^1.54.1",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.0",
     "vite": "^7.0.5",
     "vitest": "^3.2.4",
     "vitest-browser-react": "^1.0.0"
@@ -28,8 +33,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/material": "^7.2.0",
-    "react-router": "^7.6.3"
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.1"
   }
 }
