--- a/examples/nginx.conf
+++ b/examples/nginx.conf
@@ -19,6 +19,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+        # for browser routes
+        location / {
+            try_files $uri /index.html;
+        }
     }
 
     server {
@@ -39,6 +43,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        # for browser routes
+        location / {
+            try_files $uri /index.html;
         }
     }
 }
