--- a/examples/pipewire/pipewire-aes67-receiver copy.conf
+++ b/examples/pipewire/pipewire-aes67-receiver copy.conf
@@ -58,10 +58,6 @@ context.modules = [
         }
         flags = [ ifexists nofail ]
     }
-    { name = libpipewire-module-protocol-native }
-    { name = libpipewire-module-client-node }
-    { name = libpipewire-module-spa-node-factory }
-    { name = libpipewire-module-adapter }
     { name = libpipewire-module-rtp-sap
         flags = [ ifexists nofail ]
         args = {
@@ -80,88 +76,42 @@ context.modules = [
                     matches = [
                         {
                             sess.sap.announce = true
+                            # uncomment this to filter only the prodcuer
+                            #sess.name = "PipeWire RTP stream OSMC"
                         }
                     ]
                     actions = {
                         announce-stream = {}
+                        create-stream = {
+                            sess.latency.msec = 3
+                            sess.ts-direct = true
+                        }
                     }
                }
             ]
+
         }
     },
-    { name = libpipewire-module-rtp-sink
+    {   name = libpipewire-module-rtp-source
         args = {
-            ### Please select the interface here
+            #sap.ip = 239.255.255.255
+            #sap.port = 9875
+            # let the SAP decide on port
+            source.port = 5004
             local.ifname = eth0
-            ### If you want to create multiple output streams, please copy the whole
-            ### module-rtp-sink block, but change this multicast IP to another unused
-            ### one keeping 239.69.x.x range unless you know you need another one
-            destination.ip = 239.69.150.243
-            destination.port = 5004
-            net.mtu = 1280
-            net.ttl = 32
-            net.loop = false
-            # These should typically be equal
-            # You can customize packet length, but 1 ms should work for every device
-            # Consult receiver documentation to ensure it supports the value you set
-            sess.min-ptime = 1
-            sess.max-ptime = 1
-            ### Please change this, especially if you create multiple sinks
-            sess.name = "PipeWire RTP stream"
-            sess.media = "audio"
-            # This property is used if you aren't using ptp4l 4
-            sess.ts-refclk = "ptp=traceable"
-            sess.ts-offset = 0
-            # You can adjust the latency buffering here. Use integer values only
-            sess.latency.msec = 3
+            node.always-process = true
             audio.format = "S24BE"
             audio.rate = 48000
             audio.channels = 8
-            # These channel names will be visible both to applications and AES67 receivers
-            node.channel-names = ["L", "R", "C", "LFE", "LsS", "RsS", "LsR", "RsR"]
-            # Uncomment this and comment node.group in send/recv stream.props to allow
-            # separate drivers for the RTP sink and PTP sending (i.e. force rate matching on
-            # the AES67 node rather than other nodes)
-            #aes67.driver-group = "pipewire.ptp0"
-
             stream.props = {
-                ### Please change the sink name, this is necessary when you create multiple sinks
-                node.name = "rtp-sink-rp5"
-                media.class = "Audio/Sink"
+                media.class = "Audio/Source"
+                node.name = "rtp-source"
+                node.group = pipewire.ptp0
                 node.virtual = false
                 device.api = aes67
-                sess.sap.announce = true
-                node.always-process = true
-                node.group = pipewire.ptp0
-                rtp.ntp = 0
-                rtp.fetch-ts-refclk = true
             }
+
         }
-    },
-    { name = libpipewire-module-rtp-source
-        args = {
-            ### Please select the interface here
-            local.ifname = eth0
-
-            ### Set the Multicast IP and Port of the AES67 Stream you want to receive
-            # This MUST match the sender's configuration (e.g., the rtp-sink on another device)
-            source.ip = 239.69.150.243
-            source.port = 5004
-
-            # These properties define the audio format and are essential for connection
-            audio.format = "S24BE"
-            audio.rate = 48000
-            audio.channels = 8
-
-            # This is critical: It links the receiver's clock to the PTP driver
-            stream.props = {
-                node.name = "aes67-source"
-                media.class = "Audio/Source"
-                device.api = aes67
-                node.group = pipewire.ptp0
-                node.always-process = true
-            }
-        }
-    },
+    }
 
 ]
