improve ui and use proxy to minidsp daemon

--- a/examples/embedded/nginx.conf
+++ b/examples/embedded/nginx.conf
@@ -1,8 +1,15 @@
+pid /storage/.config/minidsp/nginx/nginx.pid;
 events {
 	worker_connections 768;
 	# multi_accept on;
 }
 http {
+    proxy_buffering off;
+    client_body_buffer_size 10m;
+    client_max_body_size    10m;
+    client_body_temp_path /storage/.config/minidsp/nginx/;
+    proxy_temp_path /storage/.config/minidsp/nginx/;
+    access_log /storage/.config/minidsp/nginx/access.log;
     server {
         listen 80;
         server_name HOSTNAME;
@@ -12,21 +19,21 @@ http {
         index index.html;
         include /storage/.config/minidsp/nginx/mime.types;
         # Reverse Proxy Rules
-        location /api/power {
+        location ~ ^/api/power(/.*)?$ {
             proxy_pass http://localhost:8000;  # Forward to local service, include /api/power
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        location /api/device {
+        location ~ ^/api/device(/.*)?$ {
             proxy_pass http://localhost:8000;  # Forward to local service, include /api/device
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        location /api/cert {
+        location ~ ^/api/cert(/.*)?$ {
             proxy_pass http://localhost:8000;  # Forward to local service, include /api/cert
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -58,21 +65,21 @@ http {
         allow 192.168.1.0/16;
         deny all;
         # Reverse Proxy Rules
-        location /api/power {
+        location ~ ^/api/power(/.*)?$ {
             proxy_pass http://localhost:8000;  # Forward to local service, include /api/power
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        location /api/device {
+        location ~ ^/api/device(/.*)?$ {
             proxy_pass http://localhost:8000;  # Forward to local service, include /api/device
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        location /api/cert {
+        location ~ ^/api/cert(/.*)?$ {
             proxy_pass http://localhost:8000;  # Forward to local service, include /api/cert
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
