--- a/examples/minidsp-ui.service
+++ b/examples/minidsp-ui.service
@@ -10,6 +10,7 @@ StartLimitBurst=10
 
 [Service]
 Type=simple
+Environment="COMPARE_STRING=ADMIN_PASSWORD"
 Environment="USE_RELAY=1"
 Environment="RELAY_PIN=21"
 Environment="DOMAIN=HOSTNAME"
