--- a/examples/embedded/minidsp.service
+++ b/examples/embedded/minidsp.service
@@ -7,7 +7,7 @@ StartLimitBurst=10
 
 [Service]
 Type=simple
-ExecStart=/storage/.config/minidsp/minidsprs/minidspd
+ExecStart=/storage/.config/minidsp/minidsprs/minidspd --config /storage/.config/minidsp/minidsprs/minidsp.toml
 Restart=always
 RestartSec=1
 StandardOutput=journal
