--- a/minidsp-server/Cargo.toml
+++ b/minidsp-server/Cargo.toml
@@ -10,6 +10,9 @@ base64 = "0.22.1"
 time = { version = "0.3.6", features = ["serde"] }
 rppal = { version = "0.22.1", optional = true }
 x509-parser = { version = "0.17.0" }
+thiserror = "2.0.17"
+serde_json = "1.0.145"
+serde = { version = "1.0.228", features = ["derive"] }
 
 [dependencies.sqlx]
 version = "0.7"
