use http daemon backend

--- a/examples/nginx.conf
+++ b/examples/nginx.conf
@@ -12,8 +12,29 @@ http {
         index index.html;
         include /etc/nginx/mime.types;
         # Reverse Proxy Rules
+        location ~ ^/api/power(/.*)?$ {
+            proxy_pass http://localhost:8000;  # Forward to local service, include /api/power
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location ~ ^/api/device(/.*)?$ {
+            proxy_pass http://localhost:8000;  # Forward to local service, include /api/device
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location ~ ^/api/cert(/.*)?$ {
+            proxy_pass http://localhost:8000;  # Forward to local service, include /api/cert
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         location /api/ {
-            proxy_pass http://localhost:8000;  # Forward to local service
+            proxy_pass http://localhost:5380/;  # Forward to local service, stripping off /api
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,8 +58,29 @@ http {
         allow 192.168.1.0/16;
         deny all;
         # Reverse Proxy Rules
+        location ~ ^/api/power(/.*)?$ {
+            proxy_pass http://localhost:8000;  # Forward to local service, include /api/power
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location ~ ^/api/device(/.*)?$ {
+            proxy_pass http://localhost:8000;  # Forward to local service, include /api/device
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location ~ ^/api/cert(/.*)?$ {
+            proxy_pass http://localhost:8000;  # Forward to local service, include /api/cert
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         location /api/ {
-            proxy_pass http://localhost:8000;  # Forward to local service
+            proxy_pass http://localhost:5380/;  # Forward to local service, stripping off /api
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
